# rs-monorepo

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
apps/api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bootup.sh  docker-compose-local.yml  docker-compose.yml  dong.txt  makefile  pyproject.toml  requirements.txt
apps/api/.claude/agents/: code-quality-validator.md  data-architect.md
apps/api/docker/mongodb/: Dockerfile
apps/api/docker/postgres/: Dockerfile
apps/api/docker/postgres/conf/: postgres.conf
apps/api/docker/redis/: Dockerfile
apps/api/migrations/: env.py
apps/api/migrations/versions/: 301576e22585_add_refresh_tokens_table.py  4276ab50b24c_init_user_table.py  51042f0de79b_drop_user_sessions_table.py  acb98b566401_add_chat_tables.py  cb29c2e523f4_add_turn_id_to_chat_messages.py  f5d72d8edcb4_2more.py
apps/api/src/: container.py  router.py  server.py
apps/api/src/agents/: __init__.py  a2a_server.py  base.py  container.py
apps/api/src/db/: __init__.py  base_conn.py  base_repository.py  conn.py  session.py  transactional.py
apps/api/src/global/: enums.py
apps/api/src/graph/: states.py
apps/api/src/model/: chat_model.py  real_estate.py  user_model.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  container.py  factories.py  test_auth_api.py
apps/api/tests/unit/: test_auth_service.py  test_jwt.py  test_password.py
apps/pipeline/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt  test_api.py
apps/pipeline/.astro/: config.yaml
apps/pipeline/dags/: common_tasks.py  dags_complex_price_update.py  dags_dong_init.py  dags_realestate_api.py  dags_realestate_dbt.py  dags_region_init.py  dags_region_init_test.py
apps/pipeline/dbt/: dbt_project.yml
apps/pipeline/dbt/profiles/: .user.yml  profiles.yml
apps/pipeline/docker/postgres/: Dockerfile
apps/pipeline/plugins/hooks/: custom_postgres_hook.py
apps/pipeline/plugins/operators/: api_to_postgres_ops.py  region_init_operator.py
apps/pipeline/src/core/: fetch.py
apps/pipeline/src/models/: model.py
apps/pipeline/src/utils/: header.py  queries.py  urls.py
(+182 files in other folders)
